2010-10-26 Markus Stauffiger <markus-at-4eyes.ch>
	* housekeeping
	* compatibility issues

2010-09-14 Michel Georgy <michel-at-4eyes.ch>
	* fixed missing require

2010-08-31 Markus Stauffiger <markus-at-4eyes.ch>
	* changed pi1/locallang to xml structure
	* localized detail.html template

2010-08-30 Markus Stauffiger <markus-at-4eyes.ch>
	* Updated manual
	* Updated ext_typoscript_setup.txt
	* Modified getUserName
	* Cleaned up templates

2010-08-30 Michel Georgy <michel-at-4eyes.ch>
	* Reviewed code
	* fixed possible sql injections
	* Added javadoc comments

2010-08-30 Markus Stauffiger <markus-at-4eyes.ch>
    * Added manual.swx
	* Updated typoscript files
	* Removed some unnecessary files
	* A little code clean up

2010-08-29 Markus Stauffiger <markus-at-4eyes.ch>
    * Removed deactivated code
	* Added phpdoc documentation
	* Added x4epersdb dependency

2010-08-29 Markus Stauffiger <markus-at-4eyes.ch>
    * Merged x4euniprojects and x4euniprojectsgeneral

2010-08-29 Markus Stauffiger <markus-at-4eyes.ch>
    * Initial forge upload
    * Deleted some unnecessary files

05-09-29 Andi Keller  <andi-at-4eyes.ch>
	* Initial release