@@ -15,6 +15,8 @@ $LOCAL_LANG = Array (
 		'contact' => 'contact info',
 		'modeAll' => 'all projects',
 		'modeCategory' => 'listByCategory',
+		'pm_running' => 'List by Project Management (running)',
+		'pm_finished' => 'List by Project Management (finished)',
 	),
 	'de' => Array (
 		'detailPageUid' => 'Detailseite',
@@ -25,6 +27,8 @@ $LOCAL_LANG = Array (
 		'modeAll' => 'alle Projekte',
 		'contact' => 'Kontakt Info',
 		'modeCategory' => 'Nach Kategorien',
+		'pm_running' => 'Liste nach Projektleiter (laufend)',
+		'pm_finished' => 'Liste nach Projektleiter (abgeschlossen)',
 	),
 );
 ?>
