@@ -1,6 +1,5 @@
 <!-- ###singleView### -->
-<!-- ###projecttitleBox### --><h1>Forschungsprojekte</h1>
-<h1 class="projecttitle">###projecttitle###</h1><!-- ###projecttitleBox### -->
+<!-- ###projecttitleBox### --><h2>###projecttitle###</h2><!-- ###projecttitleBox### -->
 <div>
 	<div>
 		<!-- ###pictureBox### -->
