@@ -43,8 +43,8 @@
 </table>
 <!-- ###listPersonel### end -->
 
-
 <!-- ###list### begin -->
+<p>###pageBrowser###</p>
 <table class="tablelist" border="0" cellpadding="0" cellspacing="0" width="100%">
 	<!-- ###headRow### begin -->
 	<tr class="tableheader">
@@ -72,4 +72,5 @@
 		<!-- ###row1### end -->
 	<!-- ###rows### end -->
 </table>
+
 <!-- ###list### end -->
